Edit .gitignore file and update css styles

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,27 @@
-.vs/
+# Build and release folders
+bin/
+obj/
 
+# User-specific files
+*.rsuser
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+
+# Auto-generated files
+*.log
+*.vspscc
+*.vssscc
+*.csproj.user
+*.csproj.FileListAbsolute.txt
+*.pdb
+
+# Temporary files
+*.tmp
+*.temp
+*.tmp.*
+*.temp.*
+
+# Others
+.vs/
