--- a/ICinema/appsettings.json
+++ b/ICinema/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-O85V51E;Initial Catalog=ICinema;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=DESKTOP-V85CUEU;Initial Catalog=ICinema;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
 
 
     },
@@ -10,7 +10,7 @@
         "SmtpUsername": "",
         "SmtpPassword":"",
         "SenderEmail": "",
-        "SenderName": "ICinema",
+        "SenderName": "ICinema"
     },
     "Logging": {
         "LogLevel": {
